# camlet

./: .gitignore  Makefile  README.md  camlet.opam  dune-project  flake.nix  ocaml_htmx.opam  tailwind.config.js
assets/: input.css  output.css
db/: init.sql  seed.sql
lib/: amount.ml  amount.mli  datetime.ml  datetime.mli  dune  event_channel.ml  handler.ml  html.ml  new_ui.re  storage.ml  transaction.ml  uuid.mli  view.ml  wallet.ml  wallet_channel.ml
migrations/: init.sql
src/: amount.ml  amount.mli  datetime.ml  dune  handler.ml  icons.ml  icons.re  main.ml  new_ui.ml  new_ui.re  storage.ml  user_channel.ml  uuid.ml  view.ml
static/: output.css
tailwind/: dune  tailwind.config.js
test/: dune
